<resources>
    <string name="app_name">Shop World</string>
    <string name="login_email">Email</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="login_olvido">Olvido su contraseña?</string>
    <string name="login_registro">Registrarse</string>

    <string name="registro_radioUser">Usuario</string>
    <string name="registro_radioEmp">Empresa</string>

    <string name="registro_fragUser_email">Email</string>
    <string name="registro_fragUser_user">Usuario</string>
    <string name="registro_fragUser_pass">Contraseña</string>
    <string name="registro_fragUser_confPass">Confirmar contraseña</string>
    <string name="registro_fragUser_fecNac">Fecha de nacimiento</string>
    <string name="registro_fragUser_btn">Registrarme</string>

    <string name="registro_fragAdmin_nTel">Número de telefono</string>
    <string name="registro_admin_menu">Registrar administrador</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_admin">navAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shop World</string>
    <string name="nav_header_subtitle">Todas los comercios en una sola aplicación</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
